# george-bot

./: .gitignore  .setup_assistant  CMakeLists.txt  ProjectHome.md  package.xml  plugin.xml  setup.py  setup_clanton_devel.sh
config/: fake_controllers.yaml  george.srdf  george_control.yaml  george_controller_list.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
launch/: README  biped_appendages.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  george_control.launch  george_demo.launch  george_moveit_controller_manager.launch.xml  george_world.launch  move_group.launch  moveit.rviz  moveit_demo.launch  moveit_live.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rqt_george.launch  rqt_george_noser.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  sensors.launch  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
meshes/: cbracket-simple.dae  foot.dae  gripper-base.dae  gripper-lfinger.dae  gripper-rfinger.dae  lconnector-simple.dae  low-profile-simple.dae  multi-purp-simple.dae  multi-purp.dae.old  offset-c-simple.dae  offset_c.dae  torso_mm.dae
msg/: Accel.msg  Appendage.msg  Appendage_state.msg  FootSensor.msg
scripts/: accel.py  follow_joint_trajectory.py  follow_joint_trajectory_head.py  follow_joint_trajectory_larm.py  follow_joint_trajectory_lleg.py  follow_joint_trajectory_rarm.py  follow_joint_trajectory_rleg.py  george_tf.py  gyro.py  home.py  robotDescription.py  serial_node.py  stop.py  trajectory_recorder.py
src/: BipedCommander.py  foot_sensors.cpp  robotDescription.py
src/Gyro/: Gyro.py  setup_gyro.py
src/rqt_george/: biped_commander.py  robotDescription.py  servo_slider.py
urdf/: george.gazebo  george.urdf  george.urdf.xacro
